--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -264,7 +264,8 @@ windows:
     - set INCLUDE=C:\Program Files (x86)\Microsoft SDKs\Windows\v7.1A\Include;C:\vs2015\VC\include;C:\Program Files (x86)\Windows Kits\10\Include\10.0.10240.0\ucrt
     - set LIB=C:\vs2015\VC\lib;C:\Program Files (x86)\Windows Kits\10\Lib\10.0.10240.0\ucrt\x64
     - set RUST_BACKTRACE=1
-    - rustup default 1.11.0-x86_64-pc-windows-msvc
+    - set RUSTFLAGS=-Zorbit=false
+    - rustup default stable-x86_64-pc-windows-msvc
     - cargo build --release --verbose
     - md5sum target\release\parity >> checksum
     - aws configure set aws_access_key_id %s3_key%
