--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -267,7 +267,7 @@ windows:
     - set RUSTFLAGS=-Zorbit=off
     - rustup default stable-x86_64-pc-windows-msvc
     - cargo build --release --verbose
-    - md5sum target\release\parity >> checksum
+    - cmd md5sum target\release\parity >> checksum
     - aws configure set aws_access_key_id %s3_key%
     - aws configure set aws_secret_access_key %s3_secret%
     - aws s3api put-object --bucket builds-parity --key %CI_BUILD_REF_NAME%/x86_64-pc-windows-msvc/parity --body target\release\parity.exe
