--- a/ipc/hypervisor/src/service.rs.in
+++ b/ipc/hypervisor/src/service.rs.in
@@ -39,7 +39,6 @@ pub struct ModuleState {
 	shutdown: bool,
 }
 
-
 #[ipc]
 pub trait ControlService {
 	fn shutdown(&self) -> bool;
@@ -104,6 +103,10 @@ impl HypervisorService {
 	/// Number of modules started and running
 	pub fn running_count(&self) -> usize {
 		self.modules.read().unwrap().iter().filter(|&(_, module)| module.started && !module.shutdown).count()
+	}
+
+	pub fn is_running(&self, id: IpcModuleId) -> bool {
+		self.modules.read().unwrap().get(&id).map(|module| module.started && !module.shutdown).unwrap_or(false)
 	}
 
 	pub fn send_shutdown(&self, module_id: IpcModuleId) {
