--- a/js/package.json
+++ b/js/package.json
@@ -142,6 +142,7 @@
     "store": "^1.3.20",
     "utf8": "^2.1.1",
     "validator": "^5.7.0",
-    "web3": "^0.17.0-alpha"
+    "web3": "^0.17.0-alpha",
+    "whatwg-fetch": "^1.0.0"
   }
 }
