--- a/parity/cli/config.full.toml
+++ b/parity/cli/config.full.toml
@@ -79,6 +79,7 @@ pruning = "auto"
 cache_size_db = 64
 cache_size_blocks = 8
 cache_size_queue = 50
+cache_size_state = 25
 cache_size = 128 # Overrides above caches with total size
 fast_and_loose = false
 db_compaction = "ssd"
