--- a/parity/cli/config.full.toml
+++ b/parity/cli/config.full.toml
@@ -67,8 +67,9 @@ usd_per_eth = "auto"
 price_update_period = "hourly"
 gas_floor_target = "4700000"
 gas_cap = "6283184"
-tx_queue_size = 2048
+tx_queue_size = 1024
 tx_queue_gas = "auto"
+tx_queue_strategy = "gas_factor"
 tx_gas_limit = "6283184"
 extra_data = "Parity"
 remove_solved = false
