revert stages swap

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -291,14 +291,6 @@ test-linux:
     - rust-test
   dependencies:
     - linux-stable
-js-test:
-  stage: test
-  before_script:
-    - ./js/scripts/install-deps.sh
-  script:
-    - ./js/scripts/test.sh
-  tags:
-    - javascript-test
 js-build:
   stage: build
   only:
@@ -319,5 +311,13 @@ js-build:
     paths:
     - js/build
     name: "stable-javascript_parity"
+js-test:
+  stage: test
+  before_script:
+    - ./js/scripts/install-deps.sh
+  script:
+    - ./js/scripts/test.sh
+  tags:
+    - javascript-test
   dependencies:
-    - js-test
+    - js-build
