Blacklisting transaction queue

--- a/ethcore/Cargo.toml
+++ b/ethcore/Cargo.toml
@@ -24,6 +24,10 @@ rayon = "0.4.2"
 semver = "0.2"
 bit-set = "0.4"
 time = "0.1"
+rand = "0.3"
+lru-cache = "0.0.7"
+byteorder = "0.5"
+transient-hashmap = "0.1"
 evmjit = { path = "../evmjit", optional = true }
 clippy = { version = "0.0.90", optional = true}
 ethash = { path = "../ethash" }
@@ -36,10 +40,7 @@ ethstore = { path = "../ethstore" }
 ethkey = { path = "../ethkey" }
 ethcore-ipc-nano = { path = "../ipc/nano" }
 rlp = { path = "../util/rlp" }
-rand = "0.3"
-lru-cache = "0.0.7"
 ethcore-bloom-journal = { path = "../util/bloom" }
-byteorder = "0.5"
 
 [dependencies.hyper]
 git = "https://github.com/ethcore/hyper"
