ci-specific build (no webpack progress)

--- a/js/package.json
+++ b/js/package.json
@@ -26,6 +26,9 @@
     "build": "npm run build:dll && npm run build:app",
     "build:app": "webpack --progress",
     "build:dll": "webpack --config webpack.vendor.js --progress",
+    "ci:build": "npm run ci:build:dll && npm run ci:build:app",
+    "ci:build:app": "NODE_ENV=production webpack",
+    "ci:build:dll": "NODE_ENV=production webpack --config webpack.vendor.js",
     "clean": "rm -rf ./build ./coverage",
     "coveralls": "npm run testCoverage && coveralls < coverage/lcov.info",
     "lint": "eslint --ignore-path .gitignore ./src/",
