Gas limit config; Allow local transactions over the limit

--- a/parity/cli/config.toml
+++ b/parity/cli/config.toml
@@ -41,6 +41,7 @@ reseal_on_txs = "all"
 reseal_min_period = 4000
 price_update_period = "hourly"
 tx_queue_size = 2048
+tx_queue_gas = "auto"
 
 [footprint]
 tracing = "on"
