--- a/parity/cli/config.full.toml
+++ b/parity/cli/config.full.toml
@@ -68,6 +68,7 @@ price_update_period = "hourly"
 gas_floor_target = "4700000"
 gas_cap = "6283184"
 tx_queue_size = 2048
+tx_queue_gas = "auto"
 tx_gas_limit = "6283184"
 extra_data = "Parity"
 remove_solved = false
