test phases changed to lint, test & pack

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -291,7 +291,7 @@ test-linux:
     - rust-test
   dependencies:
     - linux-stable
-js-build:
+js-release:
   stage: build
   image: ethcore/javascript:latest
   only:
@@ -307,14 +307,30 @@ js-build:
     - ./js/scripts/release.sh
   tags:
     - javascript
-js-test:
+js-lint:
   stage: test
   image: ethcore/javascript:latest
   before_script:
     - ./js/scripts/install-deps.sh
   script:
     - ./js/scripts/lint.sh
+  tags:
+    - javascript-test
+js-test:
+  stage: test
+  image: ethcore/javascript:latest
+  before_script:
+    - ./js/scripts/install-deps.sh
+  script:
     - ./js/scripts/test.sh
+  tags:
+    - javascript-test
+js-pack:
+  stage: build
+  image: ethcore/javascript:latest
+  before_script:
+    - ./js/scripts/install-deps.sh
+  script:
     - ./js/scripts/build.sh
   tags:
     - javascript-test
