pack part of test phase

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -326,7 +326,7 @@ js-test:
   tags:
     - javascript-test
 js-pack:
-  stage: build
+  stage: test
   image: ethcore/javascript:latest
   before_script:
     - ./js/scripts/install-deps.sh
