--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -264,12 +264,12 @@ windows:
     - set INCLUDE=C:\Program Files (x86)\Microsoft SDKs\Windows\v7.1A\Include;C:\vs2015\VC\include;C:\Program Files (x86)\Windows Kits\10\Include\10.0.10240.0\ucrt
     - set LIB=C:\vs2015\VC\lib;C:\Program Files (x86)\Windows Kits\10\Lib\10.0.10240.0\ucrt\x64
     - set RUST_BACKTRACE=1
-    - set RUSTFLAGS=%RUSTFLAGS% -Zorbit=off -D warnings
+    - set RUSTFLAGS=%RUSTFLAGS% -Zorbit=off
     - rustup default stable-x86_64-pc-windows-msvc
     - cargo build --release --verbose
     - cmd md5sum target\release\parity >> checksum
-    - cmd curl -L --url https://github.com/ethcore/win-build/raw/master/SimpleFC.dll -o nsis\SimpleFC.dll
-    - cmd curl -L --url https://github.com/ethcore/win-build/raw/master/vc_redist.x64.exe -o nsis\vc_redist.x64.exe
+    - curl -sL --url "https://github.com/ethcore/win-build/raw/master/SimpleFC.dll" -o nsis\SimpleFC.dll
+    - curl -sL --url "https://github.com/ethcore/win-build/raw/master/vc_redist.x64.exe" -o nsis\vc_redist.x64.exe
     - cmd signtool sign /f %keyfile% /p %certpass% target\release\parity.exe
     - cmd C:\NSIS\makensis.exe nsis\installer.nsi
     - cmd signtool sign /f %keyfile% /p %certpass% nsis\installer.exe
