--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -270,9 +270,9 @@ windows:
     - cmd md5sum target\release\parity >> checksum
     - curl -sL --url "https://github.com/ethcore/win-build/raw/master/SimpleFC.dll" -o nsis\SimpleFC.dll
     - curl -sL --url "https://github.com/ethcore/win-build/raw/master/vc_redist.x64.exe" -o nsis\vc_redist.x64.exe
-    - cmd signtool sign /f %keyfile% /p %certpass% target\release\parity.exe
-    - cmd C:\NSIS\makensis.exe nsis\installer.nsi
-    - cmd signtool sign /f %keyfile% /p %certpass% nsis\installer.exe
+    - signtool sign /f %keyfile% /p %certpass% target\release\parity.exe
+    - makensis.exe nsis\installer.nsi
+    - signtool sign /f %keyfile% /p %certpass% nsis\installer.exe
     - aws configure set aws_access_key_id %s3_key%
     - aws configure set aws_secret_access_key %s3_secret%
     - aws s3api put-object --bucket builds-parity --key %CI_BUILD_REF_NAME%/x86_64-pc-windows-msvc/parity --body target\release\parity.exe
