--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -267,10 +267,10 @@ windows:
     - set RUSTFLAGS=%RUSTFLAGS% -Zorbit=off
     - rustup default stable-x86_64-pc-windows-msvc
     - cargo build --release --verbose
-    - cd nsis
-    - curl -sL --url "https://github.com/ethcore/win-build/raw/master/SimpleFC.dll" -o SimpleFC.dll
-    - curl -sL --url "https://github.com/ethcore/win-build/raw/master/vc_redist.x64.exe" -o vc_redist.x64.exe
+    - curl -sL --url "https://github.com/ethcore/win-build/raw/master/SimpleFC.dll" -o nsis\SimpleFC.dll
+    - curl -sL --url "https://github.com/ethcore/win-build/raw/master/vc_redist.x64.exe" -o nsis\vc_redist.x64.exe
     - signtool sign /f %keyfile% /p %certpass% target\release\parity.exe
+    - cd nsis
     - makensis.exe installer.nsi
     - signtool sign /f %keyfile% /p %certpass% installer.exe
     - md5sums installer.exe > installer.exe.md5
