--- a/js/package.json
+++ b/js/package.json
@@ -60,6 +60,7 @@
     "chai": "^3.5.0",
     "chai-enzyme": "0.4.2",
     "cheerio": "0.20.0",
+    "copy-webpack-plugin": "^3.0.1",
     "core-js": "^2.4.1",
     "coveralls": "^2.11.11",
     "css-loader": "^0.23.1",
