Support for decryption in Signer (#2421)
* Adding some tests

* Implementing decrypt in queue

* Removing code duplication.

* Printing public key in ethstore

* Bump UI

* Normalizing dapps format for signer.

* Fixing tests compilation

* fix whitespace

[ci:skip]

--- a/signer/Cargo.toml
+++ b/signer/Cargo.toml
@@ -20,11 +20,12 @@ ethcore-util = { path = "../util" }
 ethcore-io = { path = "../util/io" }
 ethcore-rpc = { path = "../rpc" }
 ethcore-devtools = { path = "../devtools" }
+parity-dapps = { git = "https://github.com/ethcore/parity-ui.git", version = "1.4", optional = true}
 parity-dapps-signer = { git = "https://github.com/ethcore/parity-ui.git", version = "1.4", optional = true}
 
 clippy = { version = "0.0.90", optional = true}
 
 [features]
 dev = ["clippy"]
-ui = ["parity-dapps-signer"]
+ui = ["parity-dapps", "parity-dapps-signer"]
 use-precompiled-js = ["parity-dapps-signer/use-precompiled-js"]
