--- a/js/package.json
+++ b/js/package.json
@@ -119,7 +119,7 @@
     "lodash": "^4.11.1",
     "marked": "^0.3.6",
     "material-ui": "^0.15.4",
-    "material-ui-chip-input": "github:ngotchac/material-ui-chip-input",
+    "material-ui-chip-input": "^0.8.0",
     "moment": "^2.14.1",
     "react": "^15.2.1",
     "react-addons-css-transition-group": "^15.2.1",
