--- a/dapps/Cargo.toml
+++ b/dapps/Cargo.toml
@@ -11,7 +11,7 @@ build = "build.rs"
 [dependencies]
 log = "0.3"
 jsonrpc-core = "2.1"
-jsonrpc-http-server = { git = "https://github.com/ethcore/jsonrpc-http-server.git" }
+jsonrpc-http-server = { git = "https://github.com/ethcore/jsonrpc-http-server.git", branch = "beta" }
 hyper = { default-features = false, git = "https://github.com/ethcore/hyper" }
 unicase = "1.3"
 url = "1.0"
