--- a/dapps/Cargo.toml
+++ b/dapps/Cargo.toml
@@ -23,12 +23,12 @@ serde_macros = { version = "0.8", optional = true }
 zip = { version = "0.1", default-features = false }
 ethabi = "0.2.2"
 linked-hash-map = "0.3"
+parity-dapps-glue = "1.4"
 ethcore-devtools = { path = "../devtools" }
 ethcore-rpc = { path = "../rpc" }
 ethcore-util = { path = "../util" }
 fetch = { path = "../util/fetch" }
 parity-ui = { path = "./ui" }
-parity-dapps-glue = { path = "./js-glue" }
 ### DEPRECATED
 parity-dapps = { git = "https://github.com/ethcore/parity-ui.git", version = "1.4" }
 parity-dapps-home = { git = "https://github.com/ethcore/parity-ui.git", version = "1.4" }
@@ -45,7 +45,8 @@ default = ["serde_codegen"]
 nightly = ["serde_macros"]
 dev = ["clippy", "ethcore-rpc/dev", "ethcore-util/dev"]
 
-use-precompiled-js = [
-	"parity-ui/use-precompiled-js",
+ui = ["parity-ui/no-precompiled-js"]
+ui-precompiled = [
 	"parity-dapps-home/use-precompiled-js",
+	"parity-ui/use-precompiled-js"
 ]
