--- a/signer/Cargo.toml
+++ b/signer/Cargo.toml
@@ -15,18 +15,17 @@ rand = "0.3.14"
 jsonrpc-core = "3.0"
 log = "0.3"
 env_logger = "0.3"
+parity-dapps-glue = { version = "1.4", optional = true }
 ws = { git = "https://github.com/ethcore/ws-rs.git", branch = "mio-upstream-stable" }
 ethcore-util = { path = "../util" }
 ethcore-io = { path = "../util/io" }
 ethcore-rpc = { path = "../rpc" }
 ethcore-devtools = { path = "../devtools" }
-parity-dapps-glue = { path = "../dapps/js-glue", version = "1.4", optional = true}
-parity-ui = { path = "../dapps/ui", version = "1.4", optional = true}
+parity-ui = { path = "../dapps/ui", version = "1.4", optional = true }
 
 clippy = { version = "0.0.90", optional = true}
 
 [features]
 dev = ["clippy"]
-ui = ["parity-dapps-glue", "parity-ui"]
-use-precompiled-js = ["parity-ui/use-precompiled-js"]
-
+ui = ["parity-dapps-glue", "parity-ui", "parity-ui/no-precompiled-js"]
+ui-precompiled = ["parity-dapps-glue", "parity-ui", "parity-ui/use-precompiled-js"]
