--- a/.gitmodules
+++ b/.gitmodules
@@ -2,6 +2,6 @@
 	path = ethcore/res/ethereum/tests
 	url = https://github.com/ethereum/tests.git
 	branch = develop
-[submodule "js/build"]
-	path = js/build
+[submodule "ui/js/build"]
+	path = ui/js/build
 	url = https://github.com/ethcore/js-precompiled
