--- a/dapps/ui/Cargo.toml
+++ b/dapps/ui/Cargo.toml
@@ -11,7 +11,7 @@ rustc_version = "0.1"
 
 [dependencies]
 parity-ui-dev = { path = "../../js", optional = true }
-parity-ui-precompiled = { git = "https://github.com/ethcore/js-precompiled.git", branch = "rs", optional = true }
+parity-ui-precompiled = { git = "https://github.com/ethcore/js-precompiled.git", optional = true }
 
 [features]
 no-precompiled-js = ["parity-ui-dev"]
