--- a/dapps/Cargo.toml
+++ b/dapps/Cargo.toml
@@ -46,7 +46,8 @@ default = ["serde_codegen"]
 nightly = ["serde_macros"]
 dev = ["clippy", "ethcore-rpc/dev", "ethcore-util/dev"]
 
-use-precompiled-js = [
+ui = ["parity-ui/no-precompiled-js"]
+ui-precompiled = [
 	"parity-ui/use-precompiled-js",
-	"parity-dapps-home/use-precompiled-js",
+	"parity-dapps-home/use-precompiled-js"
 ]
