--- a/dapps/Cargo.toml
+++ b/dapps/Cargo.toml
@@ -20,17 +20,17 @@ url = "1.0"
 rustc-serialize = "0.3"
 serde = "0.8"
 serde_json = "0.8"
-serde_macros = { version = "0.8", optional = true }
-zip = { version = "0.1", default-features = false }
 ethabi = "0.2.2"
 linked-hash-map = "0.3"
+parity-dapps-glue = "1.4"
 mime = "0.2"
+serde_macros = { version = "0.8", optional = true }
+zip = { version = "0.1", default-features = false }
 ethcore-devtools = { path = "../devtools" }
 ethcore-rpc = { path = "../rpc" }
 ethcore-util = { path = "../util" }
 fetch = { path = "../util/fetch" }
 parity-ui = { path = "./ui" }
-parity-dapps-glue = { path = "./js-glue" }
 
 mime_guess = { version = "1.6.1" }
 clippy = { version = "0.0.90", optional = true}
@@ -43,4 +43,5 @@ default = ["serde_codegen"]
 nightly = ["serde_macros"]
 dev = ["clippy", "ethcore-rpc/dev", "ethcore-util/dev"]
 
-use-precompiled-js = ["parity-ui/use-precompiled-js"]
+ui = ["parity-ui/no-precompiled-js"]
+ui-precompiled = ["parity-ui/use-precompiled-js"]
