--- a/parity/cli/config.full.toml
+++ b/parity/cli/config.full.toml
@@ -29,6 +29,9 @@ id = "0x1"
 bootnodes = []
 discovery = true
 warp = true
+allow_ips = "all"
+snapshot_peers = 0
+max_pending_peers = 64
 
 reserved_only = false
 reserved_peers = "./path_to_file"
