--- a/js/package.json
+++ b/js/package.json
@@ -109,6 +109,7 @@
     "blockies": "0.0.2",
     "bytes": "^2.4.0",
     "es6-promise": "^3.2.1",
+    "file-saver": "^1.3.3",
     "format-json": "^1.0.3",
     "format-number": "^2.0.1",
     "geopattern": "^1.2.3",
