--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -262,6 +262,7 @@ windows:
     - set LIB=C:\vs2015\VC\lib;C:\Program Files (x86)\Windows Kits\10\Lib\10.0.10240.0\ucrt\x64
     - set RUST_BACKTRACE=1
     - set RUSTFLAGS=-Zorbit=off
+    - set RUSTFLAGS=-D warnings
     - rustup default stable-x86_64-pc-windows-msvc
     - git submodule update --init
     - cargo build --release --verbose
